tests/test_files/valid_files/or.c

int main() {
    for (int a = 0; a <= 1; ++a) {
        for (int b = 0; b <= 1; ++b) {
            printf("%d || %d = %d\n", a, b, a || b);
        }
    }
    return 0;
}
