tests/test_files/invalid_files_sintatic/missing_semicolon.c
int main() {
    int x = 5    // ❌ sem “;” aqui
    return 0;
}
